--- a/Basic_JavaScript_Projects/Project1_expressions_alert/index.html
+++ b/Basic_JavaScript_Projects/Project1_expressions_alert/index.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>
-        <button onclick="My_First_Function()" id="Green_Text">
+        <button onclick="\"My_First_Function()"+"" id="Green_Text">
             Click Me!
         </button>
     </body>
